fixed search bar alignment

--- a/Design (Analyst)/ADMIN/search-bar.css
+++ b/Design (Analyst)/ADMIN/search-bar.css
@@ -32,6 +32,6 @@ body {
     #adv-search {
         width: 550px;
         margin: 0 auto;
-        left: 50px;
+        left: 175px;
     }
 }
